--- a/style.css
+++ b/style.css
@@ -23,11 +23,11 @@ canvas {
 }
 
 #leftBar{
-    width: 25%;
+    width: 29%;
     color: RGBA(255, 255, 255, 0.5);
     position: fixed;
     left: 0;
-    margin-left: 40px;
+    margin-left: 10px;
     z-index: 0;
     height: 100%;
 }
@@ -57,16 +57,26 @@ canvas {
 	color: RGBA(255, 255, 255, 0.5);
 	position: fixed;
 	right: 0;
-	margin-right: 40px;
+	margin-right: 10px;
 	z-index: 0;
-	width: 25%;
+	width: 28%;
     height: 100%;
 	overflow: hidden;
 }
 
 #debug{
-	color: #4C9F00;
+	color: #4C9FAA;
 	font-size: 20px;
+}
+
+#smallURLHead{
+    font-size: 20px;
+}
+
+#smallURLText{
+    color: #4C9FAA;
+	font-size: 19px;
+    text-decoration: none;
 }
 
 #rightBar ul {
